tests/specs/type_alias.txt
# mod.ts
export type A = number

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type A = number
  | ^

# output.txt
Defined in file:///mod.ts:0:1

type A = number


# output.json
{
  "symbols": [
    {
      "name": "A",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 0,
            "byteIndex": 0
          },
          "declarationKind": "export",
          "kind": "typeAlias",
          "def": {
            "tsType": {
              "repr": "number",
              "kind": "keyword",
              "value": "number"
            }
          }
        }
      ]
    }
  ]
}
